--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:textColor="@color/text"
             android:textSize="18sp" />
 
-            <!--android:textColor="@drawable/text_bg"-->
+        <!--android:textColor="@drawable/text_bg"-->
         <EditText
             android:layout_width="match_parent"
             android:layout_height="48dp"
@@ -33,5 +33,18 @@
 
     </RelativeLayout>
 
+
+    <com.example.apen.apencustomview.view.CircleView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true" />
+
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
